Add ACK S3 controller to prod infrastructure

--- a/infrastructure/production/kustomization.yaml
+++ b/infrastructure/production/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - nginx
   - redis
   - notifications # Enable notifications for production
+  - ack # Install the ACK infrastructure resources
