--- a/infrastructure/production/sources/kustomization.yaml
+++ b/infrastructure/production/sources/kustomization.yaml
@@ -4,3 +4,4 @@ namespace: flux-system
 resources:
   - bitnami.yaml
   - podinfo.yaml
+  - s3-controller.yaml # Add the S3 controller as an infrastructure piece
